--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
     "react": "^18.2.0",
