[S08P31A603-178] Feat: Swagger 추가

--- a/backend/hearo/src/main/resources/application.yml
+++ b/backend/hearo/src/main/resources/application.yml
@@ -11,3 +11,6 @@ spring:
     properties:
       hibernate:
         format_sql: true  # SQL pretty print
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
