--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "use-long-press": "^3.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
