--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   chat_gpt_api: ^1.0.2
   # 컨펌창
   confirm_dialog: ^1.0.1
-
+  # 토글 예쁜거
+  animated_toggle_switch: ^0.6.2
 
 dev_dependencies:
   flutter_test:
