--- a/backend/hearo/build.gradle
+++ b/backend/hearo/build.gradle
@@ -14,11 +14,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'mysql:mysql-connector-java:8.0.33'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// mysql
+	implementation 'mysql:mysql-connector-java:8.0.33'
 
 	// swagger
 	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
