--- a/backend/hearo/build.gradle
+++ b/backend/hearo/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 
 	// Spring Boot Starter Security
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+	// JWT
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 tasks.named('test') {
