[S08P31A603-200] Update: 플러터 화면 재정비
상세설명
- 피그마 새로운 버젼으로 플러터 화면 재정비

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -60,7 +60,8 @@ dependencies:
   wakelock: ^0.6.2
   # 토스트
   fluttertoast: ^8.2.1
-
+  # 말풍선
+  bubble: ^1.2.1
   
 dev_dependencies:
   flutter_test:
