--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8",
     "use-long-press": "^3.0.4"
   },
   "devDependencies": {
