[S08P31A603-198] Update: 자주 쓰는 말 에러 수정
상세설명
- 넘치면 넘어가게 수정

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   fluttertoast: ^8.2.1
   # 말풍선
   bubble: ^1.2.1
+  # 오토 사이즈 텍스트
+  auto_size_text: ^3.0.0
+
   
 dev_dependencies:
   flutter_test:
