--- a/backend/hearo/build.gradle
+++ b/backend/hearo/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	// JWT
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.auth0:java-jwt:4.2.1'
+
 }
 
 tasks.named('test') {
