--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-modal": "^3.16.0",
     "axios": "^1.3.5",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
