[S08P31A603-297] fe 대화창 view 구현 중

--- a/frontend/hearo_web/tsconfig.json
+++ b/frontend/hearo_web/tsconfig.json
@@ -19,6 +19,14 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "**/*.ts",
+    "**/*.tsx",
+    "custom.d.ts",
+    "styles",
+    "pages",
+    "public"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
