--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -16,13 +16,15 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-modal": "^3.16.0",
     "axios": "^1.3.5",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-spinners": "^0.13.8",
-    "use-long-press": "^3.0.4"
+    "use-long-press": "^3.0.4",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
