[S08P31A603-293] Feat : 캐러셀을 위한 react-slick 설치 및 asset 추가
상세설명
- 설치 및 asset 추가

--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -23,12 +23,14 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "react-slick": "^0.29.0",
     "use-long-press": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.16.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
