[S08P31A603-203] Feat: GetX와 로컬저장소를 이용한
상세설명
- GetX랑 로컬저장소 패키지 연결

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -64,7 +64,10 @@ dependencies:
   bubble: ^1.2.1
   # 오토 사이즈 텍스트
   auto_size_text: ^3.0.0
-
+  # 반짝반짝
+  flutter_animate: ^4.1.1+1
+  # 겟 스토리지 로컬 저장소
+  get_storage: ^2.1.1
   
 dev_dependencies:
   flutter_test:
