--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -24,8 +24,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
-    "use-long-press": "^3.0.4",
     "react-spinners": "^0.13.8",
+    "twin.macro": "^3.3.1",
+    "use-long-press": "^3.0.4",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
