--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -2,12 +2,14 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+bidict==0.22.1
 blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 Flask==2.3.1
+Flask-SocketIO==5.3.3
 frozenlist==1.3.3
 idna==3.4
 importlib-metadata==6.6.0
@@ -16,6 +18,8 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 multidict==6.0.4
 openai==0.27.5
+python-engineio==4.4.1
+python-socketio==5.8.0
 requests==2.29.0
 tqdm==4.65.0
 urllib3==1.26.15
