--- a/frontend/hearo_app/android/app/build.gradle
+++ b/frontend/hearo_app/android/app/build.gradle
@@ -70,4 +70,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
