[S08P31A603-229] Update: 도커파일 수정

--- a/backend/hearo/Dockerfile
+++ b/backend/hearo/Dockerfile
@@ -10,7 +10,7 @@ COPY src $APP_HOME/src
 
 ENV SPRING_PROFILES_ACTIVE=dev
 
-RUN gradle clean build
+RUN gradle clean build -x test
 
 FROM openjdk:11-jdk
 
