--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
     "twin.macro": "^3.3.1",
     "use-long-press": "^3.0.4",
