--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -8,9 +8,12 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-Flask==2.3.1
-Flask-SocketIO==5.3.3
+dnspython==1.16.0
+eventlet==0.30.0
+Flask==2.0.3
+Flask-SocketIO==4.3.1
 frozenlist==1.3.3
+greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
@@ -18,11 +21,12 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 multidict==6.0.4
 openai==0.27.5
-python-engineio==4.4.1
-python-socketio==5.8.0
+python-engineio==3.13.2
+python-socketio==4.6.0
 requests==2.29.0
+six==1.16.0
 tqdm==4.65.0
 urllib3==1.26.15
-Werkzeug==2.3.1
+Werkzeug==2.0.3
 yarl==1.9.2
 zipp==3.15.0
