[S08P31A603-229] Update: gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ build/
 application-google.yml
 application-jwt.yml
 application-mysql.yml
+docker-compose.yml
 ### STS ###
 .apt_generated
 .classpath
