--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   # 겟 스토리지 로컬 저장소
   get_storage: ^2.1.1
   # 오디오 재생
+  assets_audio_player: ^3.0.6
   audioplayers: ^4.0.1
   flutter_sound: ^9.2.13
   # 구글 로그인
@@ -99,7 +100,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/sounds/
+    - assets/audios/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
