--- a/frontend/hearo_web/Dockerfile
+++ b/frontend/hearo_web/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npm run build
 EXPOSE 5173
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "preview"]
