[S08P31A603-326] Update: 웹 도커 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -179,6 +179,8 @@ application-google.yml
 application-jwt.yml
 application-mysql.yml
 docker-compose.yml
+nginx.conf
+
 ### STS ###
 .apt_generated
 .classpath
