--- a/frontend/hearo_web/Dockerfile
+++ b/frontend/hearo_web/Dockerfile
@@ -1,8 +1,14 @@
-FROM node:18
+# build stage
+FROM node:18 as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
 RUN npm run build
-EXPOSE 5173
-CMD ["npm", "run", "preview"]
+
+# production stage
+FROM nginx
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
