--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -80,6 +80,10 @@ dependencies:
   firebase_core: ^2.10.0
   # 권한 요청
   permission_handler: ^10.2.0
+  # 블루투스
+  flutter_blue_plus: 
+  # flutter_reactive_ble: ^5.0.3
+
 
 dev_dependencies:
   flutter_test:
