[S08P31A603-000] Feat: 녹음 트라이
상세설명
- 녹음 도전

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -83,7 +83,8 @@ dependencies:
   # 블루투스
   flutter_blue_plus: 
   # flutter_reactive_ble: ^5.0.3
-
+  intl:
+  path:
 
 dev_dependencies:
   flutter_test:
