[S08P31A603-000] Feat: STT 테스트 성공
상세설명
- STT 테스트 성공했지만 기능 추가해야함

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -85,6 +85,10 @@ dependencies:
   # flutter_reactive_ble: ^5.0.3
   intl:
   path:
+  # stt
+  speech_to_text:
+  highlight_text:
+  avatar_glow:
 
 dev_dependencies:
   flutter_test:
