--- a/backend/hearo_fastapi/requirements.txt
+++ b/backend/hearo_fastapi/requirements.txt
@@ -1,27 +1,49 @@
+absl-py==1.4.0
 anyio==3.6.2
+attrs==23.1.0
 certifi==2022.12.7
+cffi==1.15.1
 click==8.1.3
 colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
 dnspython==2.3.0
 email-validator==2.0.0.post2
 fastapi==0.95.1
+flatbuffers==23.3.3
+fonttools==4.39.3
 h11==0.14.0
 httpcore==0.17.0
 httptools==0.5.0
 httpx==0.24.0
 idna==3.4
+importlib-resources==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.4
 MarkupSafe==2.1.2
+matplotlib==3.7.1
+mediapipe==0.9.3.0
+numpy==1.24.3
+opencv-contrib-python==4.7.0.72
 orjson==3.8.11
+packaging==23.1
+Pillow==9.5.0
+protobuf==3.20.3
+pycparser==2.21
 pydantic==1.10.7
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
+six==1.16.0
 sniffio==1.3.0
+sounddevice==0.4.6
 starlette==0.26.1
 typing_extensions==4.5.0
 ujson==5.7.0
 uvicorn==0.22.0
 watchfiles==0.19.0
 websockets==11.0.2
+zipp==3.15.0
