style: web... view change. ... from mobile to desktop

--- a/frontend/hearo_web/tsconfig.json
+++ b/frontend/hearo_web/tsconfig.json
@@ -3,6 +3,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "types": ["@emotion/react/types/css-prop"],
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
@@ -17,7 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react"
   },
   "include": [
     "src",
