--- a/backend/hearo_fastapi/requirements.txt
+++ b/backend/hearo_fastapi/requirements.txt
@@ -1,8 +1,11 @@
 absl-py==1.4.0
 anyio==3.6.2
+astunparse==1.6.3
 attrs==23.1.0
+cachetools==5.3.0
 certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 contourpy==1.0.7
@@ -12,24 +15,42 @@ email-validator==2.0.0.post2
 fastapi==0.95.1
 flatbuffers==23.3.3
 fonttools==4.39.3
+gast==0.4.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.0
 h11==0.14.0
+h5py==3.8.0
 httpcore==0.17.0
 httptools==0.5.0
 httpx==0.24.0
 idna==3.4
+importlib-metadata==6.6.0
 importlib-resources==5.12.0
 itsdangerous==2.1.2
+jax==0.4.8
 Jinja2==3.1.2
+joblib==1.2.0
+keras==2.12.0
 kiwisolver==1.4.4
+libclang==16.0.0
+Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 mediapipe==0.9.3.0
-numpy==1.24.3
+ml-dtypes==0.1.0
+numpy==1.23.5
+oauthlib==3.2.2
 opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
 orjson==3.8.11
 packaging==23.1
 Pillow==9.5.0
 protobuf==3.20.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.7
 pyparsing==3.0.9
@@ -37,13 +58,28 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
+requests==2.30.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 sniffio==1.3.0
 sounddevice==0.4.6
 starlette==0.26.1
-typing_extensions==4.5.0
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.3.0
+threadpoolctl==3.1.0
+typing-extensions==4.5.0
 ujson==5.7.0
+urllib3==2.0.2
 uvicorn==0.22.0
 watchfiles==0.19.0
 websockets==11.0.2
+Werkzeug==2.3.3
+wrapt==1.14.1
 zipp==3.15.0
