--- a/backend/hearo_fastapi/requirements.txt
+++ b/backend/hearo_fastapi/requirements.txt
@@ -1,85 +1,67 @@
-absl-py==1.4.0
-anyio==3.6.2
-astunparse==1.6.3
-attrs==23.1.0
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
-dnspython==2.3.0
-email-validator==2.0.0.post2
-fastapi==0.95.1
-flatbuffers==23.3.3
-fonttools==4.39.3
-gast==0.4.0
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.54.0
-h11==0.14.0
-h5py==3.8.0
-httpcore==0.17.0
-httptools==0.5.0
-httpx==0.24.0
-idna==3.4
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-itsdangerous==2.1.2
-jax==0.4.8
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.12.0
-kiwisolver==1.4.4
-libclang==16.0.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-mediapipe==0.9.3.0
-ml-dtypes==0.1.0
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-contrib-python==4.7.0.72
-opencv-python==4.7.0.72
-opt-einsum==3.3.0
-orjson==3.8.11
-packaging==23.1
-Pillow==9.5.0
-protobuf==3.20.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydantic==1.10.7
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-PyYAML==6.0
-requests==2.30.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.2.2
-scipy==1.10.1
-six==1.16.0
-sniffio==1.3.0
-sounddevice==0.4.6
-starlette==0.26.1
-tensorboard==2.12.3
-tensorboard-data-server==0.7.0
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.3.0
-threadpoolctl==3.1.0
-typing-extensions==4.5.0
-ujson==5.7.0
-urllib3==2.0.2
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.2
-Werkzeug==2.3.3
-wrapt==1.14.1
-zipp==3.15.0
+attrs==19.3.0
+Automat==0.8.0
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+cloud-init==23.1.2
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
+ec2-hibinit-agent==1.0.0
+entrypoints==0.3
+hibagent==1.0.1
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+Jinja2==2.10.1
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+MarkupSafe==1.1.0
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
+pexpect==4.6.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.1+ubuntu0.20.4.1
+python-debian===0.1.36ubuntu1
+PyYAML==5.3.1
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sos==4.4
+ssh-import-id==5.10
+systemd-python==234
+Twisted==18.9.0
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+wadllib==1.3.3
+zipp==1.0.0
+zope.interface==4.7.1
