--- a/backend/hearo_ai/.gitignore
+++ b/backend/hearo_ai/.gitignore
@@ -1,6 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
-
+credential.json
 ### API Key ###
 keys.py
 
