[S08P31A603-000] Feat: 소켓 뼈대 구성
상세설명
- 왜 안되지


Former-commit-id: f2813e03e64b233b4c4d433bf46bbf175f2242f7

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -89,6 +89,9 @@ dependencies:
   speech_to_text:
   highlight_text:
   avatar_glow:
+  # 소켓
+  socket_io_client: ^2.0.2
+  
 
 dev_dependencies:
   flutter_test:
