--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
