--- a/backend/hearo_fastapi/requirements.txt
+++ b/backend/hearo_fastapi/requirements.txt
@@ -4,6 +4,7 @@ attrs==23.1.0
 bidict==0.22.1
 certifi==2022.12.7
 cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 contourpy==1.0.7
@@ -28,6 +29,7 @@ matplotlib==3.7.1
 mediapipe==0.9.3.0
 numpy==1.24.3
 opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
 orjson==3.8.11
 packaging==23.1
 Pillow==9.5.0
@@ -41,13 +43,16 @@ python-engineio==4.4.1
 python-multipart==0.0.6
 python-socketio==5.8.0
 PyYAML==6.0
+requests==2.30.0
 six==1.16.0
 sniffio==1.3.0
 sounddevice==0.4.6
 starlette==0.26.1
 typing_extensions==4.5.0
 ujson==5.7.0
+urllib3==2.0.2
 uvicorn==0.22.0
 watchfiles==0.19.0
+websocket-client==1.5.1
 websockets==11.0.2
 zipp==3.15.0
