--- a/backend/hearo_fastapi/Dockerfile
+++ b/backend/hearo_fastapi/Dockerfile
@@ -1,4 +1,9 @@
-FROM python:3.8
+FROM tiangolo/uvicorn-gunicorn:python3.8
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        libgl1-mesa-glx \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
