--- a/backend/hearo/src/main/resources/application.yml
+++ b/backend/hearo/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  cors:
+    allowed-origins: ""
+    allowed-methods: ""
+    allowed-headers: "*"
+    allow-credentials: true
   profiles:
     include:
       - google
