--- a/backend/hearo/build.gradle
+++ b/backend/hearo/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 //	 JWT
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
