[S08P31A603-384] Feat: 10일자 한거
상세설명
- 카메라 소켓 음성 다 뚫음


Former-commit-id: 09218e49aeb77685e48d43a08755cde016037045

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -91,7 +91,12 @@ dependencies:
   avatar_glow:
   # 소켓
   socket_io_client: ^2.0.2
-  
+  # 마이크
+  microphone: ^0.1.0
+  # 경로
+  path_provider:
+  # 카메라
+  camera:
 
 dev_dependencies:
   flutter_test:
