[S08P31A603-000] Feat: 소켓 분리
상세설명
- 소켓 분리하기만 함


Former-commit-id: b6f9fc5cd69ff6899e4dd7023e7896519ecf24c1

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -97,6 +97,8 @@ dependencies:
   path_provider:
   # 카메라
   camera:
+  # 용량 줄이기
+  flutter_image_compress: ^2.0.2
 
 dev_dependencies:
   flutter_test:
