--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -1,32 +1,120 @@
+absl-py==1.4.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+anyio==3.6.2
+asttokens==2.2.1
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==23.1.0
+backcall==0.2.0
 bidict==0.22.1
-blinker==1.6.2
+cachetools==5.3.0
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-dnspython==1.16.0
-eventlet==0.30.0
-Flask==2.0.3
-Flask-SocketIO==4.3.1
+comm==0.1.3
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+dnspython==2.3.0
+email-validator==2.0.0.post2
+executing==1.2.0
+fastapi==0.95.1
+fastapi-socketio==0.0.10
+flatbuffers==23.3.3
+fonttools==4.39.3
 frozenlist==1.3.3
-greenlet==2.0.2
+gast==0.4.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.54.0
+h11==0.14.0
+h5py==3.8.0
+httpcore==0.17.0
+httptools==0.5.0
+httpx==0.24.0
 idna==3.4
 importlib-metadata==6.6.0
+importlib-resources==5.12.0
+ipykernel==6.23.0
 itsdangerous==2.1.2
+jax==0.4.9
+jedi==0.18.2
 Jinja2==3.1.2
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+keras==2.12.0
+kiwisolver==1.4.4
+libclang==16.0.0
+Markdown==3.4.3
 MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mediapipe==0.9.3.0
+ml-dtypes==0.1.0
 multidict==6.0.4
-openai==0.27.5
-python-engineio==3.13.2
-python-socketio==4.6.0
-requests==2.29.0
+nest-asyncio==1.5.6
+numpy==1.23.5
+oauthlib==3.2.2
+openai==0.27.6
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+orjson==3.8.11
+packaging==23.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.5.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.5
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==1.10.7
+pydub==0.25.1
+Pygments==2.15.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-engineio==4.4.1
+python-multipart==0.0.6
+python-socketio==5.8.0
+PyYAML==6.0
+pyzmq==25.0.2
+requests==2.30.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.10.1
 six==1.16.0
+sniffio==1.3.0
+sounddevice==0.4.6
+stack-data==0.6.2
+starlette==0.26.1
+tensorboard==2.12.3
+tensorboard-data-server==0.7.0
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+tornado==6.3.1
 tqdm==4.65.0
-urllib3==1.26.15
-Werkzeug==2.0.3
+traitlets==5.9.0
+typing_extensions==4.5.0
+ujson==5.7.0
+urllib3==2.0.2
+uvicorn==0.22.0
+watchfiles==0.19.0
+wcwidth==0.2.6
+websocket-client==1.5.1
+websockets==11.0.2
+Werkzeug==2.3.4
+wrapt==1.14.1
 yarl==1.9.2
 zipp==3.15.0
