--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -99,6 +99,9 @@ dependencies:
   camera:
   # 용량 줄이기
   flutter_image_compress: ^2.0.2
+  # 앱이름이미지
+  flutter_launcher_icons:
+
 
 dev_dependencies:
   flutter_test:
