[S08P31A603-433] Feat: S3 업로드 및 클로바 스피치 API 진행 중

--- a/backend/hearo/.gitignore
+++ b/backend/hearo/.gitignore
@@ -8,6 +8,7 @@ application-google.yml
 application-jwt.yml
 application-mysql.yml
 application-s3.yml
+application-clova.yml
 
 ### STS ###
 .apt_generated
