[S08P31A603-000] Feat: 와꾸 중간쯤 팜
상세설명
- 와꾸 다듬기

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -101,6 +101,7 @@ dependencies:
   flutter_image_compress: ^2.0.2
   # 앱이름이미지
   flutter_launcher_icons:
+  flutter_switch: ^0.3.2
 
 
 dev_dependencies:
