--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -91,6 +91,7 @@ pyzmq==25.0.2
 requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
 sniffio==1.3.0
