Feat: .webm -> .wav 변환 기능 구현
Former-commit-id: 3767f5d03735d4172e4b8584c5497d01c432fd22

--- a/backend/hearo/build.gradle
+++ b/backend/hearo/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpmime:4.3.1'
 	implementation 'com.google.code.gson:gson:2.8.5'
 
+	// Jave2
+	implementation group: 'ws.schild', name: 'jave-all-deps', version: '3.3.1'
 }
 
 tasks.named('test') {
