sound classification hotfix
Former-commit-id: 66fc65fa14395b9cd0f80ec4dfef345fab32a29b

--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -13,6 +13,7 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
+cmake==3.26.3
 colorama==0.4.6
 comm==0.1.3
 contourpy==1.0.7
@@ -24,41 +25,62 @@ email-validator==2.0.0.post2
 executing==1.2.0
 fastapi==0.95.1
 fastapi-socketio==0.0.10
+filelock==3.12.0
 flatbuffers==23.3.3
 fonttools==4.39.3
 frozenlist==1.3.3
+fsspec==2023.5.0
 gast==0.4.0
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.54.0
+gunicorn==20.1.0
 h11==0.14.0
 h5py==3.8.0
 httpcore==0.17.0
 httptools==0.5.0
 httpx==0.24.0
+huggingface-hub==0.14.1
+HyperPyYAML==1.2.0
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
 ipykernel==6.23.0
+ipython==8.12.2
 itsdangerous==2.1.2
 jax==0.4.9
 jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+lit==16.0.3
 Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mediapipe==0.9.3.0
 ml-dtypes==0.1.0
+mpmath==1.3.0
 multidict==6.0.4
 nest-asyncio==1.5.6
+networkx==3.1
 numpy==1.23.5
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 oauthlib==3.2.2
 openai==0.27.6
 opencv-contrib-python==4.7.0.72
@@ -67,12 +89,14 @@ opt-einsum==3.3.0
 orjson==3.8.11
 packaging==23.1
 parso==0.8.3
+pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.5.0
 prompt-toolkit==3.0.38
 protobuf==3.20.3
 psutil==5.9.5
+ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
@@ -91,25 +115,34 @@ pyzmq==25.0.2
 requests==2.30.0
 requests-oauthlib==1.3.1
 rsa==4.9
+ruamel.yaml==0.17.26
+ruamel.yaml.clib==0.2.7
 scipy==1.10.1
+sentencepiece==0.1.99
 six==1.16.0
 sniffio==1.3.0
 sounddevice==0.4.6
+speechbrain==0.5.14
 stack-data==0.6.2
 starlette==0.26.1
+sympy==1.12
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
 tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
+torch==2.0.1
+torchaudio==2.0.2
 tornado==6.3.1
 tqdm==4.65.0
 traitlets==5.9.0
+triton==2.0.0
 typing_extensions==4.5.0
 ujson==5.7.0
 urllib3==2.0.2
 uvicorn==0.22.0
+uvloop==0.17.0
 watchfiles==0.19.0
 wcwidth==0.2.6
 websocket-client==1.5.1
