[S08P31A603-306] Feat: 로컬알람성공
상세설명
- 로컬알람성공


Former-commit-id: 1b476b1cb4635190a3726f620c65ff7260398620

--- a/frontend/hearo_app/pubspec.yaml
+++ b/frontend/hearo_app/pubspec.yaml
@@ -102,6 +102,7 @@ dependencies:
   # 앱이름이미지
   flutter_launcher_icons:
   flutter_switch: ^0.3.2
+  flutter_local_notifications: ^14.0.0+2
 
 
 dev_dependencies:
