--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -31,8 +31,10 @@ fonttools==4.39.3
 frozenlist==1.3.3
 fsspec==2023.5.0
 gast==0.4.0
+google-api-core==2.11.0
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
+google-cloud-speech==2.19.0
 google-pasta==0.2.0
 grpcio==1.54.0
 gunicorn==20.1.0
@@ -99,6 +101,7 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
+PyAudio==0.2.13
 pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.7
