--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -101,7 +101,7 @@ psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
-PyAudio==0.2.13
+# PyAudio==0.2.13
 pyasn1-modules==0.3.0
 pycparser==2.21
 pydantic==1.10.7
