--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -36,7 +36,9 @@ google-auth==2.17.3
 google-auth-oauthlib==1.0.0
 google-cloud-speech==2.19.0
 google-pasta==0.2.0
+googleapis-common-protos==1.59.0
 grpcio==1.54.0
+grpcio-status==1.48.2
 gunicorn==20.1.0
 h11==0.14.0
 h5py==3.8.0
@@ -96,13 +98,14 @@ pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.5.0
 prompt-toolkit==3.0.38
+proto-plus==1.22.2
 protobuf==3.20.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.5.0
-PyAudio
 pyasn1-modules==0.3.0
+PyAudio==0.2.13
 pycparser==2.21
 pydantic==1.10.7
 pydub==0.25.1
