[S08P31A603-000] Feat: 수어인식 테스트
상세설명
- 수어인식 테스트


Former-commit-id: d4524d7963c7910e5b19f573213bb8d33d461851

--- a/frontend/hearo_app/android/app/build.gradle
+++ b/frontend/hearo_app/android/app/build.gradle
@@ -61,6 +61,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+                       // TODO: release 빌드 버전을 위한 서명 구성을 추가하세요.
+           // 현재는 `flutter run --release`가 디버그용 키로 서명되어 동작합니다.
+        //    signingConfig signingConfigs.release
         }
     }
 }
