Update: 화자 분리 librosa 테스트 중
Former-commit-id: 0cc7e9e11ba67a2a87dacac9c111f67b1c89a78c

--- a/backend/hearo_ai/requirements.txt
+++ b/backend/hearo_ai/requirements.txt
@@ -62,6 +62,7 @@ jupyter_core==5.3.0
 keras==2.12.0
 kiwisolver==1.4.4
 libclang==16.0.0
+librosa==0.10.0.post2
 lit==16.0.3
 Markdown==3.4.3
 MarkupSafe==2.1.2
