--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.3.5",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
