--- a/backend/hearo_ai/Dockerfile
+++ b/backend/hearo_ai/Dockerfile
@@ -12,6 +12,8 @@ COPY ./requirements.txt ./requirements.txt
 
 RUN pip install --no-cache-dir --upgrade -r ./requirements.txt
 
+ENV GOOGLE_APPLICATION_CREDENTIALS=./credential.json
+
 COPY . .
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
