Fix: ssl 일단 빼봅시다
Former-commit-id: 6f6ba556ae5f8c822285cd19c26b3e3e6e4e354a

--- a/backend/hearo_ai/Dockerfile
+++ b/backend/hearo_ai/Dockerfile
@@ -22,4 +22,4 @@ COPY . .
 ENV SSL_CERT_PATH=./ssl_certificate.pem
 ENV SSL_KEY_PATH=./ssl_private_key.pem
 
-CMD ["uvicorn", "main:/app", "--host", "0.0.0.0", "--port", "80", "--ssl-keyfile",  "$SSL_KEY_PATH", "--ssl-certfile", "$SSL_CERT_PATH"]
+CMD ["uvicorn", "main:/app", "--host", "0.0.0.0", "--port", "80"]
