Hotfix: main 경로 수정
Former-commit-id: bb4ab1ad54831464f22e8ee32ecfe9c0f9951602

--- a/backend/hearo_ai/Dockerfile
+++ b/backend/hearo_ai/Dockerfile
@@ -18,4 +18,4 @@ ENV GOOGLE_APPLICATION_CREDENTIALS=./credential.json
 COPY . .
 
 
-CMD ["uvicorn", "main:/app", "--host", "0.0.0.0", "--port", "8090"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8090"]
