--- a/backend/hearo_ai/Dockerfile
+++ b/backend/hearo_ai/Dockerfile
@@ -17,5 +17,4 @@ ENV GOOGLE_APPLICATION_CREDENTIALS=./credential.json
 
 COPY . .
 
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8090"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8090", "--ssl-keyfile", "/app/ssl_private_key.pem", "--ssl-certfile", "/app/ssl_certificate.pem"]
