--- a/frontend/hearo_web/package.json
+++ b/frontend/hearo_web/package.json
@@ -18,6 +18,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-modal": "^3.16.0",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.3.5",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
