--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 frontend/firebase-tools-instant-win.exe filter=lfs diff=lfs merge=lfs -text
+frontend/hearo_web/public/HearoApp.apk filter=lfs diff=lfs merge=lfs -text
