--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 frontend/firebase-tools-instant-win.exe filter=lfs diff=lfs merge=lfs -text
+frontend/hearo_web/public/HearoApp.apk filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
